fix translateZ(1px) bluriness, replace with z-index. promote z-index of .flip, in question.less

--- a/client/css/questions.less
+++ b/client/css/questions.less
@@ -578,5 +578,8 @@ p.sp-button-text {
   //display:block!important;
 }
 
-//-Effects ===================================
+//-profile pages ===================================
+.flip {
+  z-index: 2;
+}
 
